--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact Us</button>
       </div>
     </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
+    <div class="overflow-hidden" style="max-height: 40vh;">
       <div class="container px-5">
-        <img src="./assets/pictures/moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Moving van on a road" width="700"
-          height="500" loading="lazy">
+        <img src="./assets/pictures/moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Moving van on a road" width="800"
+          height="600" style="max-width: 90%;" loading="lazy">
       </div>
     </div>
   </div>
